--- a/flipkart.html
+++ b/flipkart.html
@@ -13,10 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-   
+
 </head>
 
 <body>
+
+    <!--=========================================================Header Start Here==============================================================================-->
     <div class="header">
 
         <div class="logo">
@@ -25,23 +27,116 @@
                 font-weight: bolder; margin-right:2px">Plus</span></a>
         </div>
         <div class="search">
-
             <input type="text" placeholder="Search for products, brands and more" name="search-text">
             <button><img src="images/header/asset 69.svg"></button>
+
+            <div class="RecentSearch">
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-clock-rotate-left"></i>
+                    <p>Laptop or PC Cleaner</p>
+                </div>
+                <p class="DiscoverMore">Discover More</p>
+                <!--Recent Search-->
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>mobiles</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>shoes</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>t shirts</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>laptop</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>watches</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>tv</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>sarees</p>
+                </div>
+                <div class="RecentSearch-List">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Laptop or PC Cleaner</p>
+                </div>
+            </div>
         </div>
         <button class="loginBtn">Login
-            <div  class="HoverLogin">
+            <div class="HoverLogin">
                 <div class="triangle-up"></div>
-                    <div class="Newuser">
-                        <p>New customer?</p>
-                        <a href="#">Sign Up</a>
+                <div class="Newuser">
+                    <p>New customer?</p>
+                    <a href="#">Sign Up</a>
+                </div>
+                <div class="loginMenu">
+                    <div class="menuList">
+                        <i class="fa-solid fa-circle-user"></i>
+                        <p>My Profile</p>
                     </div>
-                
+                    <div class="menuList">
+                        <i class="fa-solid fa-circle-plus"></i>
+                        <p>Flipkart Plus Zone</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-cart-plus"></i>
+                        <p>Orders</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-heart"></i>
+                        <p>Wishlist</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-money-bill-1"></i>
+                        <p>Rewards</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-gift"></i>
+                        <p>Gift Cards</p>
+                    </div>
+                </div>
             </div>
         </button>
-        <a class="Navlink1 angledownIcon" href="#">More<span style="margin-left:5px ;"><i class="fa-solid fa-angle-down fa-2xs"></i></span></a>
-        <a class="Navlink1" href="#">Cart</a>
+        <a class="Navlink1 angledownIcon" href="#">More<span style="margin-left:5px ;"><i
+                    class="fa-solid fa-angle-down fa-2xs down"></i></span>
+                 <div class="HoverMore">
+                    <div class="triangle-up-more"></div>
+                    <div class="moreMenu">
+                        <div class="moreList">
+                            <i class="fa-solid fa-bell"></i>
+                            <p>Notification Preferences</p>
+                        </div>
+                        <div class="menuList">
+                            <i class="fa-solid fa-circle-question"></i>
+                            <p>24&times;7 Customer Care</p>
+                        </div>
+                        <div class="menuList">
+                            <i class="fa-solid fa-arrow-trend-up"></i>
+                            <p>Advertise</p>
+                        </div>
+                        <div class="menuList">
+                            <i class="fa-solid fa-download"></i>
+                            <p>Download App</p>
+                        </div>
+                    </div>
+                 </div>
+                </a>
+        <a class="Navlink1" href="#">
+            <img src="images/header/asset 71.svg" alt="Cart"/>Cart
+        </a>
     </div>
+    
+
+
     <script src="https://kit.fontawesome.com/39cee866b1.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
