--- a/flipkart.html
+++ b/flipkart.html
@@ -108,33 +108,159 @@
         </button>
         <a class="Navlink1 angledownIcon" href="#">More<span style="margin-left:5px ;"><i
                     class="fa-solid fa-angle-down fa-2xs down"></i></span>
-                 <div class="HoverMore">
-                    <div class="triangle-up-more"></div>
-                    <div class="moreMenu">
-                        <div class="moreList">
-                            <i class="fa-solid fa-bell"></i>
-                            <p>Notification Preferences</p>
-                        </div>
-                        <div class="menuList">
-                            <i class="fa-solid fa-circle-question"></i>
-                            <p>24&times;7 Customer Care</p>
-                        </div>
-                        <div class="menuList">
-                            <i class="fa-solid fa-arrow-trend-up"></i>
-                            <p>Advertise</p>
-                        </div>
-                        <div class="menuList">
-                            <i class="fa-solid fa-download"></i>
-                            <p>Download App</p>
-                        </div>
+            <div class="HoverMore">
+                <div class="triangle-up-more"></div>
+                <div class="moreMenu">
+                    <div class="moreList">
+                        <i class="fa-solid fa-bell"></i>
+                        <p>Notification Preferences</p>
                     </div>
-                 </div>
-                </a>
+                    <div class="menuList">
+                        <i class="fa-solid fa-circle-question"></i>
+                        <p>24&times;7 Customer Care</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                        <p>Advertise</p>
+                    </div>
+                    <div class="menuList">
+                        <i class="fa-solid fa-download"></i>
+                        <p>Download App</p>
+                    </div>
+                </div>
+            </div>
+        </a>
         <a class="Navlink1" href="#">
-            <img src="images/header/asset 71.svg" alt="Cart"/>Cart
+            <img src="images/header/asset 71.svg" alt="Cart" />Cart
         </a>
     </div>
-    
+
+
+    <!--==================================================================Navbar Start =============================================================================-->
+    <nav>
+        <div class="nav-item">
+            <img src="images/navbar/asset 9.png" alt="product">
+            <p>Top Offers</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 2.png" alt="product">
+            <p>Grocery</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 3.png" alt="product">
+            <p>Mobile</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 4.png" alt="product">
+            <p>Fashion</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 5.png" alt="product">
+            <p>Electronics</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 6.jpeg" alt="product">
+            <p>Home</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 7.png" alt="product">
+            <p>Appliances</p>
+        </div>
+        <div class="nav-item">
+            <img src="images/navbar/asset 8.png" alt="product">
+            <p>Travel</p>
+        </div>
+
+        <div class="nav-item">
+            <img src="images/navbar/asset 10.png" alt="product">
+            <p>Beauty,Toys &amp; More</p>
+        </div>
+    </nav>
+
+    <!--====================================================================Section 1 Start Here====================================================================-->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-9 offset-1 slider">
+                <div class="row subheading">
+
+                    <h4>Deals of the Day</h4>
+                    <button class="btn btn-primary">View All</button>
+
+                </div>
+                <div class="row">
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="com-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2 banner">
+                <img src="images/section-1/specialoffer.webp" alt="banner">
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://kit.fontawesome.com/39cee866b1.js" crossorigin="anonymous"></script>
