--- a/flipkart.html
+++ b/flipkart.html
@@ -182,14 +182,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-9 offset-1 slider">
-                <div class="row subheading">
+                <div class="row secheading">
 
                     <h4>Deals of the Day</h4>
                     <button class="btn btn-primary">View All</button>
 
                 </div>
-                <div class="row">
-                    <div class="com-sm">
+                <div class="row scroll">
+                    <div class="col-sm">
                         <div class="card-layout">
                             <img src="images/section-1/asset 25.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
@@ -197,57 +197,57 @@
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 26.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 27.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 28.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 31.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 32.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="com-sm">
+                    <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/asset 33.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -258,6 +258,85 @@
             <div class="col-sm-2 banner">
                 <img src="images/section-1/specialoffer.webp" alt="banner">
             </div>
+        </div>
+        <div class="row">
+            <div class="col-sm offset-1 slider2">
+                <div class="row secheading">
+                    <div class="section-2-subheading">
+                    <h4>Books And music Instruments</h4>
+                    <p>Shop Now!</p>
+                    </div>
+                    <button class="btn btn-primary">View All</button>
+
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 26.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 27.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 28.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From 10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
