--- a/flipkart.html
+++ b/flipkart.html
@@ -18,17 +18,17 @@
 
 <body>
 
-    <!--=========================================================Header Start Here==============================================================================-->
+    <!--Header Start Here-->
     <div class="header">
 
         <div class="logo">
-            <img src="images/header/logo/asset 0.png" alt="flipkart-logo">
+            <img src="images/header/icon.png" alt="flipkart-logo">
             <a href="#">Explore <span style="color: #ffe500;
                 font-weight: bolder; margin-right:2px">Plus</span></a>
         </div>
         <div class="search">
             <input type="text" placeholder="Search for products, brands and more" name="search-text">
-            <button><img src="images/header/asset 69.svg"></button>
+            <button><img src="images/header/search.svg"></button>
 
             <div class="RecentSearch">
                 <div class="RecentSearch-List">
@@ -131,7 +131,7 @@
             </div>
         </a>
         <a class="Navlink1" href="#">
-            <img src="images/header/asset 71.svg" alt="Cart" />Cart
+            <img src="images/header/cart.svg" alt="Cart" />Cart
         </a>
     </div>
 
@@ -139,40 +139,40 @@
     <!--==================================================================Navbar Start =============================================================================-->
     <nav>
         <div class="nav-item">
-            <img src="images/navbar/asset 9.png" alt="product">
+            <img src="images/navbar/category1.png" alt="product">
             <p>Top Offers</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 2.png" alt="product">
+            <img src="images/navbar/category2.png" alt="product">
             <p>Grocery</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 3.png" alt="product">
+            <img src="images/navbar/category3.png" alt="product">
             <p>Mobile</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 4.png" alt="product">
+            <img src="images/navbar/category4.png" alt="product">
             <p>Fashion</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 5.png" alt="product">
+            <img src="images/navbar/category5.png" alt="product">
             <p>Electronics</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 6.jpeg" alt="product">
+            <img src="images/navbar/category6.jpeg" alt="product">
             <p>Home</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 7.png" alt="product">
+            <img src="images/navbar/category7.png" alt="product">
             <p>Appliances</p>
         </div>
         <div class="nav-item">
-            <img src="images/navbar/asset 8.png" alt="product">
+            <img src="images/navbar/category8.png" alt="product">
             <p>Travel</p>
         </div>
 
         <div class="nav-item">
-            <img src="images/navbar/asset 10.png" alt="product">
+            <img src="images/navbar/category9.png" alt="product">
             <p>Beauty,Toys &amp; More</p>
         </div>
     </nav>
@@ -191,7 +191,47 @@
                 <div class="row scroll">
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-1/section-1-item1.jpeg" alt="Camera">
+                            <p class="card-title">DSLR & Mirrorless</p>
+                            <p class="price">Under &#8377;30,000 </p>
+                            <p class="brand">Nikon,Sony,Canon</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/section-1-item2.jpeg" alt="Camera">
+                            <p class="card-title">Projectors</p>
+                            <p class="price">Under &#8377;5,000 </p>
+                            <p class="brand">Epson,Sony,LG</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/section-1-item3.jpeg" alt="Camera">
+                            <p class="card-title">Plain Cases & Covers</p>
+                            <p class="price">Under &#8377;169 </p>
+                            <p class="brand">For All Top Models</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/section-1-item4.jpeg" alt="Camera">
+                            <p class="card-title">Printers</p>
+                            <p class="price">Under &#8377;2336 </p>
+                            <p class="brand">Canon</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/section-1-item5.jpeg" alt="Camera">
+                            <p class="card-title">Monitors</p>
+                            <p class="price">From &#8377;10800</p>
+                            <p class="brand">Sony</p>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="card-layout">
+                            <img src="images/section-1/section-1-item6.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -199,7 +239,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 26.jpeg" alt="Camera">
+                            <img src="images/section-1/section-1-item7.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -207,47 +247,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 27.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 28.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 31.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 32.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 33.jpeg" alt="Camera">
+                            <img src="images/section-1/section-1-item8.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -272,7 +272,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-2/section-2-item1.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 26.jpeg" alt="Camera">
+                            <img src="images/section-2/section-2-item2.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 27.jpeg" alt="Camera">
+                            <img src="images/section-2/section-2-item3.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -296,7 +296,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 28.jpeg" alt="Camera">
+                            <img src="images/section-2/section-2-item4.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -304,31 +304,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-layout">
-                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 30.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
-                            <p class="card-title">Monitors</p>
-                            <p class="price">From 10800</p>
-                            <p class="brand">Sony</p>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card-layout">
-                            <img src="images/section-1/asset 25.jpeg" alt="Camera">
+                            <img src="images/section-2/section-2-item5.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
@@ -339,8 +315,7 @@
             
         </div>
     </div>
-
-
+    
 
     <script src="https://kit.fontawesome.com/39cee866b1.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
